# atelier-kit

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  package-lock.json  package.json  vite.config.js
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  documentation.yml  feature_request.yml
.github/workflows/: ci.yml
config/: about.yaml  catalog.yaml  contact.yaml  footer.yaml  layout.yaml  signal-clouds.yaml  site.yaml  social.yaml
content/collections/: starter-selection.yaml
content/items/: example-item.yaml  giraffa-panoramica.yaml  ippopotamo-timido.yaml  (+1 more)
desktop/: README.md  index.html  package-lock.json  package.json
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/src/: lib.rs  main.rs
docs/: client-intake.md
scripts/: content-doctor.js  item.js  kit-version.js  publish.js  run-tests.js  scaffold-client.js  site-upgrade.js  site-wizard.js  studio-dev.js  studio-launch.js  validate-content.js
src/: app.d.ts  app.html  hooks.server.js
test/: client-test-runner.test.js  form-status-adapter.test.js  genealogy-scaffold.test.js  hero-signature-atelier-mark.test.js  item-relations-integration.test.js  item-signal-cloud-layout.test.js  kit-version.test.js  layout-block-validation.test.js  layout-blocks.test.js  legacy-tagline-display.test.js  news-visitor-variants.test.js  site-appearance.test.js  site-upgrade-version.test.js  studio-image-mutation-components.test.js  studio-image-mutation-integration.test.js  ui-components-integration.test.js  visitor-brief-integration.test.js
(+249 files in other folders)
