[package]
name = "atelier-desktop"
version = "0.1.0"
description = "Atelier Desktop — local studio wrapper for Atelier-Kit client sites"
authors = ["Atelier-Kit"]
edition = "2021"

[lib]
name = "atelier_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
